--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "express-handlebars": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
