--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-handlebars": "^5.2.0",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.3",
-    "express-handlebars": "^5.2.0"
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
