--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "tailwindcss": "^3.4.3"
+    "nodemon": "^3.1.0"
   }
 }
