--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js"
-    
+    "watch": "nodemon server.js",
+    "seed": "node seeds/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +20,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^5.3.5",
     "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3"
   },
